force-app/main/default/objects/Account/fields/POC_Phone__c.field-meta.xml
<CustomField>
    <fullName>POC_Phone__c</fullName>
    <description>POC_Phone</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>POC_Phone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>