force-app/main/default/objects/Account/fields/POC_Title__c.field-meta.xml
<CustomField>
    <fullName>POC_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POC Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>