force-app/main/default/objects/Account/fields/Rating_Count__c.field-meta.xml
<CustomField>
    <fullName>Rating_Count__c</fullName>
    <description>The count of ratings for the account</description>
    <label>Rating Count</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>