force-app/main/default/objects/Account/fields/Rating_Sum__c.field-meta.xml
<CustomField>
    <fullName>Rating_Sum__c</fullName>
    <description>The sum of ratings submitted for the account</description>
    <label>Rating Sum</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>