force-app/main/default/objects/Account/fields/ShippingLine2__c.field-meta.xml
<CustomField>
    <fullName>ShippingLine2__c</fullName>
    <description>Agent Organization MailingAddressLine2</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>