force-app/main/default/objects/Account/fields/TaxID__c.field-meta.xml
<CustomField>
    <fullName>TaxID__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>TaxID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>