force-app/main/default/objects/Account/fields/Twitter__c.field-meta.xml
<CustomField>
    <fullName>Twitter__c</fullName>
    <description>URL of organization&apos;s twitter</description>
    <label>Twitter</label>
    <type>Url</type>
</CustomField>