force-app/main/default/objects/Account/recordTypes/Agency_User.recordType-meta.xml
<RecordType>
    <fullName>Agency_User</fullName>
    <active>true</active>
    <description>For Agency Users</description>
    <label>Agency User</label>
</RecordType>