force-app/main/default/objects/Account/recordTypes/Assister.recordType-meta.xml
<RecordType>
    <fullName>Assister</fullName>
    <active>true</active>
    <label>Assister</label>
</RecordType>