force-app/main/default/objects/Account/recordTypes/AuthRep.recordType-meta.xml
<RecordType>
    <fullName>AuthRep</fullName>
    <active>true</active>
    <description>Authorized representative account</description>
    <label>AuthRep</label>
</RecordType>