force-app/main/default/objects/Account/recordTypes/Citizen.recordType-meta.xml
<RecordType>
    <fullName>Citizen</fullName>
    <active>true</active>
    <label>Citizen</label>
</RecordType>