force-app/main/default/objects/Account/recordTypes/Non_Citizen_Account.recordType-meta.xml
<RecordType>
    <fullName>Non_Citizen_Account</fullName>
    <active>true</active>
    <label>Non Citizen Account</label>
</RecordType>