force-app/main/default/objects/Account/recordTypes/Resource_Engine.recordType-meta.xml
<RecordType>
    <fullName>Resource_Engine</fullName>
    <active>true</active>
    <label>Organization</label>
</RecordType>